5.0a1 -> 5.0a2:
    - jbj: fix: don't add RPMTAG_ARCH to pubkeys, pubkeys cannot be erased.
    - afb: make devtool %standalone include the required %{_rpmhome}/magic.
    - jbj: fix: handle absolute paths to spec files again.
    - jbj: fix: don't attempt header sanity checks on pubkeys.
    - jbj: fix: don't loop on failed lookup by instance.
    - jbj: Eliminate SUPPORT_RPMV3_PROVIDE_SELF Provies: N = E:V-R retrofit.
    - jbj: Eliminate SUPPORT_RPMV3_BASENAMES_HACKS file path conversions.
    - jbj: Eliminate SUPPORT_RPMV3_VERIFY_{RSA,DSA} header+payload signatures.
    - jbj: Eliminate SUPPORT_RPMV3_SIGN_{RSA,DSA} header+payload signatures.
    - jbj: Eliminate SUPPORT_PGP_SIGNING signing with pgp/pgp5 code.
    - jbj: Eliminate SUPPORT_RPMV3_BORKEN busted md5 digest tag code.
    - jbj: revert the noisy tag data type validation. explicit typing for 5.0.
    - jbj: add HEADERFLAG_SIGNATURE, revert he->signature access markers.
    - afb: upgrade internal rsyncable zlib, from 1.2.2.4 to 1.2.3
    - jbj: fix: segfault with corrupted rpm reported at http://qa.mandriva.com/show_bug.cgi?id=33735
    - jbj: handle --root/--dbpath variants, with/without URL, using --rebuilddb.
    - jbj: rpmdb: casts for integral conversions.
    - jbj: lib: identify and repair several minor flaws caught by splint.
    - jbj: rpmio: casts for integral conversions.
    - jbj: rpmio: casts for character <-> integral conversions.
    - jbj: first pass through header.c converting to uint32_t everywhere.
    - jbj: get rid of splint spew before chasing header.c integers.
    - jbj: use splint to check integral types, eliminate the easy stuff.
    - jbj: splint fiddles for rpmdb.
    - jbj: don't cache unsatisfied Suggests:.
    - jbj: fix the last memory leak with -Kvv, recheck install/query paths.
    - jbj: functional -Kvv *.xar header-only DSA verify.
    - jbj: disable tagTypeValidate on --addsig and --delsig paths.
    - jbj: remap rpmlog levels to status quo ante.